kubernetes-manifests/network/network-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "global-ingress"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
